--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Botânica Aplicada
-email: hello@patdryburgh.com
+email: nada@nada.nada
 description: >- # this means to ignore newlines until "baseurl:"
-  An inarguably well-designed Jekyll theme.
+  Experimentos culinários na diversidade vegetal.
 baseurl: "/botanica-aplicada" # the subpath of your site, e.g. /blog
 url: "https://tibroc.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-512.png
